feat: add hello there

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.lihuel</groupId>
     <artifactId>discordbot</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-BETA</version>
     <name>discordbot</name>
     <description>discordbot</description>
     <properties>
